Tune apache rewrite pass-through rules to include cgi-sid and URL root for OpenID vhosts, in order to let OpenID server check back for liveness and to discover valid entry points. Tweak 2FA token input so that help text fits even on FF. Make sure content div fills the entire height behind the 2FA token box, to avoid it turning into a narrow stripe in basic skins with a pattern in the background. Remove leftover DOCTYPE tag in twofactor html template.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@3829 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/default.css
+++ b/mig/images/default.css
@@ -1287,9 +1287,12 @@ div.openidlogin {
 }
 
 /* Layout for 2FA token entry page */
+#content div.twofactorbg {
+    min-height: 600px;
+}
 #twofactorbox input[type=text], #twofactorbox select {
     width: 200px;
-    padding: 12px 20px;
+    padding: 12px 16px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
